<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">История Беларуси</string>
    <string name="app_info">Учи историю легко и просто!</string>

    <string name="auth_info">Зарегистрируйтесь либо войдите в аккаунт</string>
    <string name="login_hint">Введите логин</string>
    <string name="password_hint">Введите пароль</string>
    <string name="name_hint">Введите ваше имя</string>

    <string name="register">Зарегистрироваться</string>
    <string name="login">Войти в аккаунт</string>

    <string name="transition_to_login">у вас есть акканут? Войти</string>
    <string name="transition_to_register">у вас нет акканута? Зарегистрироваться</string>

    <string name="practice">Практика</string>
    <string name="tickets">Билеты</string>

    <string name="gen_events">Основные даты и события</string>
    <string name="events_info">Скоро появится</string>

    <string name="header_events">Справочник по событиям</string>
    <string name="header_definitions">Справочник по определениям</string>
    <string name="header_data">Справочник по датам</string>

    <string name="data">Дата</string>
    <string name="event">Событие</string>
    <string name="definition">Определение</string>

    <string name="events">События</string>
    <string name="datas">Даты</string>

    <string name="achieves">Достижения</string>
    <string name="achieves_info">Получай различные достижения за изучение материала и прохождение практики</string>

    <string name="settings">Настройки</string>

    <string name="go_to">Перейти</string>
    <string name="go_to_practice">Перейти к выполнению практики</string>

    <string name="themes">Темы</string>
    <string name="languages">Языки</string>

    <string name="default_theme">Системная</string>
    <string name="light_theme">Cветлая</string>
    <string name="dark_theme">Темная</string>

    <string name="russian">Русский</string>
    <string name="belarussian">Белорусский</string>
    <string name="ru" translatable="false">ru</string>
    <string name="be" translatable="false">be</string>

    <string name="input" >Ввести</string>
    <string name="further">Далее</string>
    <string name="return_string">Нажмите еще раз, чтобы выйти</string>
    <string name="result">Результат</string>

    <string name="return_to_menu">Вернуться в главное меню</string>
    <string name="null_task_request">Пожалуйста! Введите ваш ответ</string>
    <string name="back_task">Вы точно хотите вернуться в главное меню? Результат не сохранится</string>
    <string name="back_task_neg_button">Продолжить</string>
    <string name="back_task_pos_button">Главное меню</string>
    <string name="back_ticket_info">Вы точно хотите закончить изучение билета? Время до получения достижения: </string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="empty_practice_list">Нет практических заданий</string>
    <string name="empty_ticket_list">Нет теоретических заданий</string>
    <string name="empty_achieves">Нет достижений</string>
    <string name="achieve_received">Достижение получено!</string>


    <string name="reset_achieves">Сбросить достижения</string>
    <string name="reset_tickets">Сбросить билеты</string>
    <string name="reset_practice">Сбросить практику</string>
    <string name="choose_role">Выберите роль</string>

    <string name="user">Пользователь</string>
    <string name="teacher">Учитель</string>
    <string name="admin">Администратор</string>
    <string name="change_profile">Изменить профиль</string>
    <string name="error_data_was_not_loaded">Данные не загружены</string>
    <string name="error_result">Повторите попытку позже</string>
    <string name="groups">Группы</string>
    <string name="user_groups_empty">Вы не состоите в группе. Нажмите, чтобы присоединиться</string>
    <string name="teacher_groups_empty">У вас нет созданных групп</string>
    <string name="statistic">Статистика</string>

    <string name="participants_reduction">уч.</string>
    <string name="ticket_name">Название</string>
    <string name="description">Описание</string>
    <string name="ticket_question">Теоретический вопрос</string>
    <string name="ticket">Билет</string>
    <string name="achieve">Достижение</string>
    <string name="practice_question">Практическое задание</string>
    <string name="information">Информация</string>
    <string name="delete_group">Удалить группу</string>
    <string name="access_error">Вам не хватает прав</string>
    <string name="error_repeat_btn">Повторить попытку</string>
    <string name="add_new_user">Добавить нового пользователя\n</string>
    <string name="add_new_group">Создать новую группу</string>
    <string name="login_user_hint">Введите логин пользователя</string>
    <string name="group_name_hint">Создайте название группы</string>
    <string name="cancel_action">Отменить</string>
    <string name="add_action">Добавить</string>
    <string name="members_group_empty">В группе нет пользователей</string>

    <string name="change">Изменить</string>
    <string name="time_form">Мин : Сек</string>
    <string name="mins">Мин</string>
    <string name="ticket_questions">Теоретические вопросы</string>
    <string name="time_format_ticket">00</string>
    <string name="timer_divider">:</string>
    <string name="play_animation">Включить анимацию</string>
    <string name="map_type_header">Выберите тип карты</string>
    <string name="add_animation">Добавить анимацию</string>
    <string name="error_empty_field">Поле пустое</string>


</resources>