<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/main_padding">

    <androidx.constraintlayout.utils.widget.ImageFilterView
        android:id="@+id/imgLogo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/text_color"
        android:textSize="@dimen/header_text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAppInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_info"
        android:textColor="@color/text_color"
        android:textSize="@dimen/main_text" />

    <TextView
        android:id="@+id/tvAuthInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:paddingBottom="5dp"
        android:text="@string/auth_info"
        android:textColor="@color/text_color"
        android:textSize="@dimen/add_text" />

    <TextView
        android:id="@+id/tvError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="3dp"
        android:textColor="@color/error_color"
        android:textSize="@dimen/main_text"
        android:visibility="gone" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/item_outline_rounded"
        android:hint="@string/login_hint"
        android:maxLength="35"
        android:padding="@dimen/main_text"
        android:singleLine="true"
        android:textColorHint="@color/add_color"
        android:textSize="@dimen/main_text" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_outline_rounded"
        android:hint="@string/password_hint"
        android:maxLength="35"
        android:padding="@dimen/main_text"
        android:singleLine="true"
        android:textColorHint="@color/add_color"
        android:textSize="@dimen/main_text" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/item_rounded_contrast"
        android:text="@string/login"
        android:textSize="@dimen/main_text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTransition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/transition_to_register"
        android:textColor="@color/add_color"
        android:textSize="@dimen/main_text" />


</androidx.appcompat.widget.LinearLayoutCompat>