<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg"
    android:padding="@dimen/main_padding">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"
        android:text="@string/settings"
        android:textColor="@color/text_color"
        android:textSize="@dimen/header_text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvThemes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"
        android:text="@string/themes"
        android:textColor="@color/text_color"
        android:textSize="@dimen/gen_text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvThemes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:background="@drawable/item_rounded_bg"
        android:orientation="vertical"
        android:padding="@dimen/main_padding" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLanguages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"
        android:text="@string/languages"
        android:textColor="@color/text_color"
        android:textSize="@dimen/gen_text" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tlLanguages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_rounded_bg"
        android:layout_marginBottom="40dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnResetAchieves"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_rounded_bg"
        android:text="@string/reset_achieves"
        android:textColor="@color/text_color"
        android:layout_marginBottom="10dp"
        android:textSize="@dimen/main_text"
        android:padding="@dimen/main_padding"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnResetPractice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_rounded_bg"
        android:text="@string/reset_practice"
        android:textColor="@color/text_color"
        android:layout_marginBottom="10dp"
        android:textSize="@dimen/main_text"
        android:padding="@dimen/main_padding"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/btnResetTickets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_rounded_bg"
        android:text="@string/reset_tickets"
        android:textColor="@color/text_color"
        android:textSize="@dimen/main_text"
        android:padding="@dimen/main_padding"/>


</androidx.appcompat.widget.LinearLayoutCompat>