<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/selector_change_items"
    android:orientation="vertical"
    android:padding="@dimen/main_padding">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTicketQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/ticket_question"
        android:textColor="@color/text_color"
        android:textSize="@dimen/main_text" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ticket_name"
        android:imeOptions="actionNone"
        android:inputType="text"
        android:textColor="@color/text_color"
        android:textSize="@dimen/main_text" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:imeOptions="actionNone"
        android:inputType="text"
        android:textColor="@color/text_color"
        android:textSize="@dimen/main_text" />

    <include
        android:id="@+id/achieveHeader"
        layout="@layout/item_change_achieve_header" />

    <!-- hidden content -->
    <include
        android:id="@+id/achieve"
        layout="@layout/item_change_achieve" />

    <!-- Save/Change -->
    <include
        android:id="@+id/action"
        layout="@layout/item_change_goto" />

</androidx.appcompat.widget.LinearLayoutCompat>