<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/main_padding">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="20dp"
            android:text="@string/gen_events"
            android:textColor="@color/text_color"
            android:textSize="@dimen/header_text" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDatas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="20dp"
            android:text="@string/header_data"
            android:textColor="@color/text_color"
            android:textSize="@dimen/gen_text" />

        <TableLayout
            android:id="@+id/tlDatas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/item_rounded_bg"
            android:padding="@dimen/main_padding">

            <include
                android:id="@+id/dataHeader"
                layout="@layout/item_event_table" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDatas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </TableLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDefinitions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="20dp"
            android:text="@string/header_definitions"
            android:textColor="@color/text_color"
            android:textSize="@dimen/gen_text" />

        <TableLayout
            android:id="@+id/tlDefinitions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/item_rounded_bg"
            android:padding="@dimen/main_padding">

            <include
                android:id="@+id/definitionHeader"
                layout="@layout/item_event_table" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDefinitions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </TableLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>